bin/MyNewGrammar.jj
PARSER_BEGIN(BibTeX)

public class BibTeX
{
  public static void main(String args []) throws ParseException
  {
      BibTeX parser = new BibTeX(System.in);
      parser.bibTex();
  }
}

PARSER_END(BibTeX)

SKIP :
{
  " " | "\r" | "\t" | "\n"
}

TOKEN :  // 1st level [entries]
{
  < ARTICLE : "@article" > |
  < BOOK : "@book" > |
  < BOOKLET : "@booklet" > |
  < CONFERENCE : "@conference" > |
  < INBOOK : "@inbook" > |
  < INCOLLECTION : "@incollection" > |
  < INPROCEEDINGS : "@inproceedings" > |
  < MANUAL : "@manual" > |
  < MASTERTHESIS : "@masterthesis" > |
  < MISC : "@misc" > |
  < PHDTHESIS : "@phdthesis" > |
  < PROCEEDINGS : "@proceedings" > |
  < TECHREPORT : "@techreport" > |
  < UNPUBLISHED : "@unpublished" >
}

TOKEN : // 2nd level [fields]
{
  < AUTHOR : "author" > |
  < TITLE : "title" > |
  < JOURNAL : "journal" > |
  < YEAR : "year" > |
  < VOLUME : "volume" > |
  < NUMBER : "number" > |
  < PAGES : "pages" > |
  < MONTH : "month" > |
  < NOTE : "note" > |
  < KEY : "key" > |
  < EDITOR : "editor" > |
  < PUBLISHER : "publisher" > |
  < SERIES : "series" > |
  < ADDRESS : "address" > |
  < EDITION : "edition" > |
  < HOWPUBLISHED : "howpublished" > |
  < CHAPTER : "chapter" > |
  < TYPE : "type" > |
  < BOOKTITLE : "booktitle" > |
  < ORGANIZATION : "organization" > |
  < SCHOOL : "school" > |
  < INSTITUTION : "institution" >
}


TOKEN : 
{
	< CHARACTER : ["A"-"Z", "a"-"z","0"-"9"] > |
	< WORD : (< CHARACTER >)+ >
  
}

void bibTex() : {}
{
	<ARTICLE> "{" <WORD> "," 
    <AUTHOR> definition() ","
    <TITLE> definition() ","
    <JOURNAL> definition() ","
    <YEAR> definition() (",")?"'"
}

void definition() : {}
{
  "=" "\"" <WORD> "\""
}
